@@ -1,23 +1,27 @@
 package c1220ftjavareact.gym.training.service;
 
 import c1220ftjavareact.gym.activity.entity.Activity;
-import c1220ftjavareact.gym.room.entity.Room;
 import c1220ftjavareact.gym.activity.service.IActivityService;
+import c1220ftjavareact.gym.room.entity.Room;
 import c1220ftjavareact.gym.room.service.IRoomService;
-import c1220ftjavareact.gym.training.dto.AvailableTimesDTO;
 import c1220ftjavareact.gym.training.dto.TrainingSessionDTO;
 import c1220ftjavareact.gym.training.dto.TrainingSessionSaveDTO;
 import c1220ftjavareact.gym.training.entity.TrainingSession;
 import c1220ftjavareact.gym.training.exception.TrainingException;
+import c1220ftjavareact.gym.training.model.RoomTimes;
+import c1220ftjavareact.gym.training.model.UnAvailableTimes;
 import c1220ftjavareact.gym.training.repository.TrainingSessionRepository;
+import c1220ftjavareact.gym.util.TimeFormatter;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import javax.transaction.Transactional;
+import java.time.DayOfWeek;
 import java.time.LocalTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class ImplTrainingSessionService implements ITrainingSessionService {
@@ -48,13 +52,8 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
             throw new TrainingException("Capacity out of room range", HttpStatus.UNPROCESSABLE_ENTITY);
         }
 
-        /// obtener sesiones en un room y conservar no borradas
-        List<TrainingSession> sessionsAtRoom = room.getTrainingSession();
-        sessionsAtRoom = this.filterSessions(sessionsAtRoom);
-
         /// verificar por dias
         if (this.verifyRoomAvailable(trainingSession)) {
-            System.out.println("Objeto en servicio (ENTRANDO A IF): " + trainingSession);
             TrainingSession savedTraining = mapper.map(trainingSession, TrainingSession.class);
 
             /// Relacion Activity
@@ -65,9 +64,8 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
 
             /// Persistence
             savedTraining = trainingSessionRepository.save(savedTraining);
-            TrainingSessionDTO dto = mapper.map(savedTraining, TrainingSessionDTO.class);
 
-            return dto;
+            return mapper.map(savedTraining, TrainingSessionDTO.class);
         } else {
             throw new TrainingException("Room not available at the selected time", HttpStatus.UNPROCESSABLE_ENTITY);
         }
@@ -100,12 +98,13 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
     @Override
     public TrainingSessionDTO getTrainingSessionById(Long id) {
         Optional<TrainingSession> trainingSession = trainingSessionRepository.findById(id);
+
         if (trainingSession.isEmpty() || trainingSession.get().isDeleted()) {
             throw new TrainingException("Training session not found", HttpStatus.NOT_FOUND);
         }
 
-        TrainingSessionDTO dto = mapper.map(trainingSession, TrainingSessionDTO.class);
-        return dto;
+        TrainingSession aux = trainingSession.get();
+        return mapper.map(aux, TrainingSessionDTO.class);
     }
 
     /// Obtener entidad de training session
@@ -152,13 +151,18 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
             trainingEntity.setRoom(room);
 
             trainingEntity = trainingSessionRepository.save(trainingEntity);
-            TrainingSessionDTO dto = mapper.map(trainingEntity, TrainingSessionDTO.class);
 
-            return dto;
+            return mapper.map(trainingEntity, TrainingSessionDTO.class);
         } else {
             throw new TrainingException("Room not available at the selected time", HttpStatus.UNPROCESSABLE_ENTITY);
         }
 
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Integer getCapacity(Long id) {
+        return trainingSessionRepository.getReferenceById(id).getCapacity();
     }
 
     @Override
@@ -179,15 +183,85 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
     }
 
     @Override
-    public AvailableTimesDTO getAvailableTimes() {
-        return null;
-    }
+    public UnAvailableTimes getUnavailableTimes() {
+        List<TrainingSession> allTrainingSessions = trainingSessionRepository.findByDeletedFalse();
+        UnAvailableTimes aux = new UnAvailableTimes();
+        boolean flag;
 
-    @Override
-    public AvailableTimesDTO getUnavailableTimes() {
-        Map<Long, HashMap<String,ArrayList<String[]>>> unAvailableTimes = new HashMap<>();
+        for (TrainingSession item : allTrainingSessions) {
+            Room roomAux = item.getRoom();
+            /// flag de room existente
+            flag = false;
+            /// Creamos auxTimes, ejemplo: ["10:30","11:30"]
+            String auxString = TimeFormatter.toString(item.getTimeStart());
+            String auxString2 = TimeFormatter.toString(item.getTimeEnd());
+            String[] auxTimes = new String[2];
+            auxTimes[0] = auxString;
+            auxTimes[1] = auxString2;
 
-        return null;
+            /// Buscamos coincidencia dentro de Available Times
+            for (RoomTimes dto : aux.getListRooms()) {
+
+                /// en este if agregamos la informacion a cada  dia dentro de AvaiableTimes
+                if (dto.getRoomId().equals(roomAux.getId())) {
+
+                    /// Se evalua por dias cuando corresponde agregar auxTimes
+                    if (item.isMonday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.MONDAY, auxTimes);
+                    }
+                    if (item.isTuesday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.TUESDAY, auxTimes);
+                    }
+                    if (item.isThursday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.THURSDAY, auxTimes);
+                    }
+                    if (item.isWednesday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.WEDNESDAY, auxTimes);
+                    }
+                    if (item.isFriday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.FRIDAY, auxTimes);
+                    }
+                    if (item.isSunday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.SUNDAY, auxTimes);
+                    }
+                    if (item.isSaturday()) {
+                        aux.addTime(roomAux.getId(), DayOfWeek.SATURDAY, auxTimes);
+                    }
+
+                    /// En caso de agregar se considera que se encontro coincidencia, seteamos el flag a true asi no creamos un item nuevo
+                    flag = true;
+                    break;
+                }
+
+            }
+
+            /// En caso de no encontrar coincidencia dentro de AvailableTimes se crea un item nuevo
+            if (!flag) {
+                aux.addNewRoom(roomAux.getId(), roomAux.getName());
+                if (item.isMonday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.MONDAY, auxTimes);
+                }
+                if (item.isTuesday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.TUESDAY, auxTimes);
+                }
+                if (item.isThursday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.THURSDAY, auxTimes);
+                }
+                if (item.isWednesday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.WEDNESDAY, auxTimes);
+                }
+                if (item.isFriday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.FRIDAY, auxTimes);
+                }
+                if (item.isSunday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.SUNDAY, auxTimes);
+                }
+                if (item.isSaturday()) {
+                    aux.addTime(roomAux.getId(), DayOfWeek.SATURDAY, auxTimes);
+                }
+            }
+        }
+        return aux;
     }
 
     private List<TrainingSessionDTO> convertEntityList(List<TrainingSession> entityList) {
@@ -207,6 +281,7 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
 
         /// obtener training sessions de ese room
         List<TrainingSession> sessionsAtRoom = room.getTrainingSession();
+        sessionsAtRoom = this.filterSessions(sessionsAtRoom);
 
         /// filtrar por los dias que nos interesan
         List<TrainingSession> filteredSessionsRoom = sessionsAtRoom.stream()
@@ -217,7 +292,7 @@ public class ImplTrainingSessionService implements ITrainingSessionService {
                         || session.isFriday() && !session.isDeleted() && trainingSession.isFriday()
                         || session.isSaturday() && !session.isDeleted() && trainingSession.isSaturday()
                         || session.isSunday() && !session.isDeleted() && trainingSession.isSunday())
-                .collect(Collectors.toList());
+                .toList();
 
         /// Evaluar horarios para determinar disponibilidad
         LocalTime newSessionStartTime = LocalTime.parse(trainingSession.getTimeStart());
